update qbittorrent-ee repo

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -19,13 +19,14 @@ RUN \
  apt-get update && \
  apt-get install -y \
 	gnupg \
-	python \
-    software-properties-common && \
- add-apt-repository ppa:poplite/qbittorrent-enhanced && \
+	python && \
+ apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 65121492 && \
+    echo "deb http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu bionic main" >> /etc/apt/sources.list.d/qbitorrent.list && \
+    echo "deb-src http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu bionic main" >> /etc/apt/sources.list.d/qbitorrent.list && \
  apt-get update && \
  apt-get install -y \
 	p7zip-full \
-	qbittorrent-enhanced-nox \
+	qbittorrent-enhanced-nox:arm64 \
 	unrar \
 	geoip-bin \
 	unzip && \
