--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -15,21 +15,29 @@ XDG_DATA_HOME="/config"
 
 # add repo and install qbitorrent
 RUN \
- echo "***** add qbitorrent repositories ****" && \
+ echo "***** install base package ****" && \
  apt-get update && \
  apt-get install -y \
 	gnupg \
-	python && \
+	python
+
+RUN \
+ echo "***** add qbitorrent repositories ****" && \
  apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 65121492 && \
-    echo "deb http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu bionic main" >> /etc/apt/sources.list.d/qbitorrent.list && \
-    echo "deb-src http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu bionic main" >> /etc/apt/sources.list.d/qbitorrent.list && \
+ echo "deb http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu bionic main" >> /etc/apt/sources.list.d/qbitorrent.list && \
+ echo "deb-src http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu bionic main" >> /etc/apt/sources.list.d/qbitorrent.list
+
+RUN \
+ echo "**** start install qbittorrent-ee ****" && \
  apt-get update && \
  apt-get install -y \
 	p7zip-full \
 	qbittorrent-enhanced-nox:armhf \
 	unrar \
 	geoip-bin \
-	unzip && \
+	unzip
+
+RUN \
  echo "**** cleanup ****" && \
  apt-get clean && \
  rm -rf \
