--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -13,6 +13,8 @@ ENV HOME="/config" \
 XDG_CONFIG_HOME="/config" \
 XDG_DATA_HOME="/config"
 
+RUN [ "cross-build-start" ]
+
 # add repo and install qbitorrent
 RUN \
  echo "***** install base package ****" && \
