--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -15,29 +15,31 @@ XDG_DATA_HOME="/config"
 
 # add repo and install qbitorrent
 RUN \
- echo "***** add qbitorrent repositories ****" && \
+ echo "***** install base package ****" && \
  apt-get update && \
  apt-get install -y \
 	gnupg \
-	python3 && \
- curl -s https://bintray.com/user/downloadSubjectPublicKey?username=fedarovich | apt-key add - && \
- apt-key adv --keyserver hkp://keyserver.ubuntu.com:11371 --recv-keys 7CA69FC4 && \
- echo "deb http://ppa.launchpad.net/qbittorrent-team/qbittorrent-stable/ubuntu focal main" >> /etc/apt/sources.list.d/qbitorrent.list && \
- echo "deb-src http://ppa.launchpad.net/qbittorrent-team/qbittorrent-stable/ubuntu focal main" >> /etc/apt/sources.list.d/qbitorrent.list && \
- echo "deb https://dl.bintray.com/fedarovich/qbittorrent-cli-debian focal main" >> /etc/apt/sources.list.d/qbitorrent.list && \
- echo "**** install packages ****" && \
- if [ -z ${QBITTORRENT_VERSION+x} ]; then \
-	QBITTORRENT_VERSION=$(curl -sX GET http://ppa.launchpad.net/qbittorrent-team/qbittorrent-stable/ubuntu/dists/focal/main/binary-amd64/Packages.gz | gunzip -c \
-	|grep -A 7 -m 1 "Package: qbittorrent-nox" | awk -F ": " '/Version/{print $2;exit}');\
- fi && \
+	python3 
+    
+    
+RUN \
+ echo "***** add qbitorrent repositories ****" && \
+ apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 65121492 && \
+ echo "deb http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu focal main" >> /etc/apt/sources.list.d/qbitorrent.list && \
+ echo "deb-src http://ppa.launchpad.net/poplite/qbittorrent-enhanced/ubuntu focal main" >> /etc/apt/sources.list.d/qbitorrent.list
+
+RUN \
+ echo "**** start install qbittorrent-ee ****" && \
  apt-get update && \
  apt-get install -y \
 	p7zip-full \
-	qbittorrent-cli \
-	qbittorrent-nox=${QBITTORRENT_VERSION} \
+	qbittorrent-enhanced-nox:arm64 \
 	unrar \
 	geoip-bin \
-	unzip && \
+	unzip 
+
+
+RUN \
  echo "**** cleanup ****" && \
  apt-get clean && \
  rm -rf \
